# digest-dub

./: .gitignore  Dockerfile  docker-compose.yaml  main.py  pyproject.toml
app/database/: config.py  connect.py  queries.py
app/notebooks/: merged.csv  notebook_01.ipynb  notebook_02.ipynb  notebook_03-merge.ipynb  notebook_04_merge_recommender.ipynb
app/service/: coldstart.py
app/service/utils/: digestmeal.py
app/utils/: breakpiece_01.py  breakpiece_02.py  digestmeal.py  loggertest.py  metabolize.py  recipe.py  stomach.py
db_load/: indexing.py  queries.py
